[gd_scene load_steps=4 format=3 uid="uid://cuhny837yqar6"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_0h66i"]
[ext_resource type="Texture2D" uid="uid://bbsxisx01amrs" path="res://images/start_back.png" id="1_url06"]
[ext_resource type="FontFile" uid="uid://cv865jid5q3ee" path="res://fonts/MonomakhUnicode.otf" id="3_t03cp"]

[node name="Start" type="Node2D"]

[node name="StartBack" type="Sprite2D" parent="."]
position = Vector2(325, 442)
scale = Vector2(1.69, 1.69)
texture = ExtResource("1_url06")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 6.0
offset_right = 650.0
offset_bottom = 847.0
script = ExtResource("1_0h66i")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 0
offset_left = 80.0
offset_top = 250.0
offset_right = 566.0
offset_bottom = 497.0
theme_override_constants/separation = 8
metadata/_edit_group_ = true

[node name="NewGame" type="Button" parent="Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_t03cp")
theme_override_font_sizes/font_size = 40
text = "Новая игра
"

[node name="Load" type="Button" parent="Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_t03cp")
theme_override_font_sizes/font_size = 30
text = "Загрузить"

[node name="Quit" type="Button" parent="Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_t03cp")
theme_override_font_sizes/font_size = 30
text = "Выйти"

[node name="FileDialog" type="FileDialog" parent="."]
transparent_bg = true
title = "Open a File"
position = Vector2i(0, 36)
size = Vector2i(650, 650)
transparent = true
ok_button_text = "Open"
file_mode = 0
access = 2
show_hidden_files = true
use_native_dialog = true

[node name="Label" type="Label" parent="."]
offset_left = 48.0
offset_top = 88.0
offset_right = 602.0
offset_bottom = 207.0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_t03cp")
theme_override_font_sizes/font_size = 42
text = "Симулятор  Разработчика 
Программного Кода"
horizontal_alignment = 1

[connection signal="button_down" from="Menu/VBoxContainer/NewGame" to="Menu" method="_on_newgame_button_down"]
[connection signal="button_down" from="Menu/VBoxContainer/Load" to="Menu" method="_on_hui_button_down"]
[connection signal="pressed" from="Menu/VBoxContainer/Load" to="Menu" method="_on_load_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Quit" to="Menu" method="_on_quit_pressed"]
[connection signal="file_selected" from="FileDialog" to="Menu" method="_on_file_dialog_file_selected"]
